; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/api/extr_esp_gatts_api.c_esp_ble_gatts_get_attr_value.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/api/extr_esp_gatts_api.c_esp_ble_gatts_get_attr_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ESP_BLUEDROID_STATUS_ENABLED = common dso_local global i32 0, align 4
@ESP_GATT_ILLEGAL_HANDLE = common dso_local global i64 0, align 8
@ESP_GATT_INVALID_HANDLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_ble_gatts_get_attr_value(i64 %0, i64* %1, i32** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i32**, align 8
  store i64 %0, i64* %5, align 8
  store i64* %1, i64** %6, align 8
  store i32** %2, i32*** %7, align 8
  %8 = load i32, i32* @ESP_BLUEDROID_STATUS_ENABLED, align 4
  %9 = call i32 @ESP_BLUEDROID_STATUS_CHECK(i32 %8)
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* @ESP_GATT_ILLEGAL_HANDLE, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %16

13:                                               ; preds = %3
  %14 = load i64*, i64** %6, align 8
  store i64 0, i64* %14, align 8
  %15 = load i32, i32* @ESP_GATT_INVALID_HANDLE, align 4
  store i32 %15, i32* %4, align 4
  br label %21

16:                                               ; preds = %3
  %17 = load i64, i64* %5, align 8
  %18 = load i64*, i64** %6, align 8
  %19 = load i32**, i32*** %7, align 8
  %20 = call i32 @btc_gatts_get_attr_value(i64 %17, i64* %18, i32** %19)
  store i32 %20, i32* %4, align 4
  br label %21

21:                                               ; preds = %16, %13
  %22 = load i32, i32* %4, align 4
  ret i32 %22
}

declare dso_local i32 @ESP_BLUEDROID_STATUS_CHECK(i32) #1

declare dso_local i32 @btc_gatts_get_attr_value(i64, i64*, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
